added several screens more
